package main.model;

public class Die {
    private static final int MIN_VALUE = 1;
    private static final int MAX_VALUE = 6;
    public int roll() {return 0;}
}