package main.model;

public class Piece {
    private String color;
    private Square square;

    public Piece(String color, Square square) {}
    public void moveForward(int moves) {}
    public int getPosition() {return 0;}
}