package main.model.square;

import main.model.Board;

public class FinalPathSquare extends Square {
  public FinalPathSquare(int position, Board board) {
    super(position, board);
  }
}
